* Changelog

** [[https://github.com/USTC-TNS/TNSP/compare/v0.3.16...dev][Unreleased]]

*** Added
*** Changed
*** Deprecated
*** Removed
*** Fixed

** [[https://github.com/USTC-TNS/TNSP/compare/v0.3.15...v0.3.16][v0.3.16]] - 2024-03-20

*** Fixed
+ *tetragono*: Fix the missing conjugate for the energy during calculation of natural gradient.
+ *tetragono*: Fix the compatibility for old version python. Some previous codes uses syntax introduced in python 3.11.

** [[https://github.com/USTC-TNS/TNSP/compare/v0.3.12...v0.3.15][v0.3.15]] - 2024-02-28

*** Added
+ *TAT.py*: Add =const_blocks= for tensor to get the const block which will not check the ownership.
+ *tetragono*: Add =__contains__= and =__len__= for hamiltonians handle of abstract state.
+ *bridge*: Add support for bridging from TNSP new format.
+ *tetragono*: Stop saving configuration for ergodic sampling method during gradient descent.
+ *tetragono*: Add function to convert sampling lattice back to simple update lattice.
+ *tetragono*: Add support for simple update for long range two body interaction.
*** Changed
+ *TAT.hpp*: Rename the aliases of the symmetry types, the details are shown in the next item.
+ *TAT.py*: Rename the names of the symmetry types, since the previous naming is not consistent:
  | old name   | new name       |
  |------------+----------------|
  | No         | No             |
  | Z2         | BoseZ2         |
  | U1         | BoseU1         |
  | Fermi      | FermiU1        |
  | FemriZ2    | FermiU1BoseZ2  |
  | FermiU1    | FermiU1BoseU1  |
  | Parity     | FermiZ2        |
  | FermiFermi | FermiU1FermiU1 |
+ *TAT.py*: Use =scikit-build-core= as build backend. =MAKEFLAGS= and =CMAKEFLAGS= are droped. Use =scikit-build-core=
  environment variable =SKBUILD_CMAKE_ARGS= to pass arguments to cmake command line when building =PyTAT= wheel.
+ *tetragono*: Use Lanczos algorithm instead of previous power iteration to optimize exact state. =update= function for