@@ -6,6 +6,7 @@
 *** Changed
 *** Deprecated
 *** Removed
++ *tetragono*: Remove SIGINT handle in gradient descent.
 *** Fixed
 
 ** [[https://github.com/USTC-TNS/TNSP/compare/v0.3.15...v0.3.16][v0.3.16]] - 2024-03-20
